--- a/web/detail.html
+++ b/web/detail.html
@@ -1,5 +1,5 @@
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
+<!-- <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
+<%@page contentType="text/html" pageEncoding="UTF-8"%> -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -16,11 +16,11 @@
         <div id="header">
             <ul id="nav">
                 <li><a href="/home">HOME</a></li>
-                <li><a href="">BAND</a></li>
+                <!-- <li><a href="">BAND</a></li>
                 <li><a href="">TOUR</a></li>
-                <li><a href="">CONTACT</a></li>
+                <li><a href="">CONTACT</a></li> -->
 
-                <li>
+                <!-- <li>
                     <a href="">
                         MORE
                         <i class="nav-icon-down ti-angle-down"></i>
@@ -30,7 +30,7 @@
                         <li><a href="">Extras</a></li>
                         <li><a href="">Media</a></li>
                     </ul>
-                </li>
+                </li> -->
             </ul>
             <!--End nav-->
             <!--Begin: Shop button -->
@@ -54,26 +54,33 @@
             <!--End: User-Button -->
 
         </div>
+        <div id="content">
+            <div id="detail-product">
+                <div class="left-detail">
+                    <p>Air Jordan</p>
+                    <p>
+                        <strong>${de.name}</strong>
+                    </p>
+                    <div>
+                        <p class="size">Chose your size</p>
+                        <i class="angle-size ti-angle-down"></i>
+                    </div>
+                </div>
+                <div class="right-detail">
+                    <img class="detail-img" src="./assets/img/5fad0eae5b5b3.jpg" />
 
-        <div id="detail-product">
-            <div class="left-detail">
-                <p>Air Jordan</p>
-                <p>
-                    <strong>${de.name}</strong>
-                </p>
-                <div>
-                    <p class="size">Chose your size</p>
-                    <i class="angle-size ti-angle-down"></i>
+                </div>
+                <div class="mobile-detail">
+                    <p>Air Jordan</p>
+                    <p>
+                        <strong>${de.name}</strong>
+                    </p>
+                    <div>
+                        <p class="size">Chose your size</p>
+                        <i class="angle-size ti-angle-down"></i>
+                    </div>
                 </div>
             </div>
-            <div class="right-detail">
-                <img class="detail-img" src="${de.image}" />
-
-            </div>
-        </div>
-
-        <div id="content">
-
         </div>
 
         <div id="footer">
